--- a/homescreen-not-sign-in.css
+++ b/homescreen-not-sign-in.css
@@ -1,3 +1,7 @@
+body {
+    --main-color: #5362CE;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -9,24 +13,14 @@
     justify-content: space-between;
     width: 100%;
     height: 60px;
-    background-color: #5362CE;
+    background-color: var(--main-color);
 }
 
-.logo-circle {
-    margin-left: 15px;
-    background-color: #9e9fa6;
-    width: 45px;
-    height: 45px;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo-text {
-    font-weight: bolder;
+.logo {
+    margin-left: 20px;
     color: white;
-
+    font-weight: bolder;
+    font-size: large;
 }
 
 .search-bar {
@@ -34,17 +28,14 @@
     justify-content: left;
     padding-left: 20px; 
     background-color: white;
-    width: 380px;
-    height: 40px;
+    width: 25rem;
+    height: 2.5rem;
     border: 0px;
     border-radius: 20px;
 }
 
 .search-bar::placeholder {
     color: #d1d1d1;
-}
-.icon {
-    margin-left: 20px;
 }
 
 .login-signup {
@@ -56,19 +47,20 @@
     height: 40px;
 }
 
-.profile {
-    background-color: white;
-    width: 45px;
-    height: 45px;
-    border-radius: 100%;
+.login {
+    color: white;
+    width: 4.5rem;
+    height: 2rem;
+    background-color: var(--main-color);
+    border-radius: 10px;
     border: 0px;
     cursor: pointer;
 }
 
 .signup {
-    color: #5362CE;
-    width: 80px;
-    height: 30px;
+    color: var(--main-color);
+    width: 4.5rem;
+    height: 2rem;
     background-color: white;
     border-radius: 10px;
     border: 0px;
@@ -115,3 +107,12 @@ h1 {
     font-size: x-large;
     font-weight: bold;
 }
+
+@media screen and (max-width: 530px) {
+    .img {
+        width: 100%;
+    }
+    .folder {
+        display: block;
+    }
+  }
