--- a/homescreen-already-sign-in.css
+++ b/homescreen-already-sign-in.css
@@ -1,5 +1,7 @@
 body {
     --main-color: #5362CE;
+    --place-holder: #d1d1d1;
+    --white-grey: #d9d9d9;
 }
 
 .container {
@@ -9,11 +11,16 @@ body {
 
 .searching {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 60px;
     background-color: var(--main-color);
+}
+
+.space-around {
+    display: flex;
+    justify-content: space-around;
 }
 
 .logo {
@@ -35,13 +42,13 @@ body {
 }
 
 .search-bar::placeholder {
-    color: #d1d1d1;
+    color: var(--place-holder);
 }
 
 .login-signup {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     margin-right: 20px;
     width: 160px;
     height: 40px;
@@ -65,17 +72,12 @@ body {
     align-items: center;
     width: 100%;
     height: 300px;
-    background-color: #D9D9D9;
+    background-color: var(--white-grey);
 }
 
 h1 {
     margin-left: 20px;
     font-weight: bolder;
-}
-
-.folder {
-    display: flex;
-    justify-content: space-around;
 }
 
 .topic {
