--- a/homescreen-not-sign-in.css
+++ b/homescreen-not-sign-in.css
@@ -1,6 +1,8 @@
 body {
     --main-color: #5362CE;
-}
+    --place-holder: #d1d1d1;
+    --white-grey: #d9d9d9;
+  }
 
 .container {
     display: flex;
@@ -14,6 +16,11 @@ body {
     width: 100%;
     height: 60px;
     background-color: var(--main-color);
+}
+
+.space-around {
+    display: flex;
+    justify-content: space-around;
 }
 
 .logo {
@@ -35,7 +42,7 @@ body {
 }
 
 .search-bar::placeholder {
-    color: #d1d1d1;
+    color: var(--place-holder);
 }
 
 .login-signup {
@@ -49,8 +56,8 @@ body {
 
 .login {
     color: white;
-    width: 4.5rem;
-    height: 2rem;
+    width: 80px;
+    height: 30px;
     background-color: var(--main-color);
     border-radius: 10px;
     border: 0px;
@@ -59,8 +66,8 @@ body {
 
 .signup {
     color: var(--main-color);
-    width: 4.5rem;
-    height: 2rem;
+    width: 80px;
+    height: 30px;
     background-color: white;
     border-radius: 10px;
     border: 0px;
@@ -73,17 +80,12 @@ body {
     align-items: center;
     width: 100%;
     height: 300px;
-    background-color: #D9D9D9;
+    background-color: var(--white-grey);
 }
 
 h1 {
     margin-left: 20px;
     font-weight: bolder;
-}
-
-.folder {
-    display: flex;
-    justify-content: space-around;
 }
 
 .topic {
@@ -107,12 +109,3 @@ h1 {
     font-size: x-large;
     font-weight: bold;
 }
-
-@media screen and (max-width: 530px) {
-    .img {
-        width: 100%;
-    }
-    .folder {
-        display: block;
-    }
-  }
