modify responsive, nav bar and product detail

--- a/homescreen/homescreen-already-sign-in.css
+++ b/homescreen/homescreen-already-sign-in.css
@@ -9,6 +9,20 @@ body {
     flex-direction: column;
 }
 
+/* Navigation bar */
+.navbar-container {
+    width: 100%;
+    height: 4.5em;
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+  }
+  .embedded-content {
+    width: 100%;
+    height: fit-content;
+  }
+
+/*
 .searching {
     display: flex;
     justify-content: space-between;
@@ -17,12 +31,12 @@ body {
     height: 60px;
     background-color: var(--main-color);
 }
-
+*/
 .space-around {
     display: flex;
     justify-content: space-around;
 }
-
+/*
 .logo {
     margin-left: 20px;
     color: white;
@@ -65,7 +79,7 @@ body {
     background-color: white;
     border-radius: 20px;
 }
-
+*/
 .information {
     display: flex;  
     justify-content: center;
