--- a/sign-up/sign-up.css
+++ b/sign-up/sign-up.css
@@ -96,3 +96,10 @@ body {
 .wrapper .media-logo img:hover {
   opacity: 0.5;
 }
+
+@media screen and (max-width: 530px) {
+  .wrapper {
+    max-width: 100%;
+    padding: 2em;
+  }
+}
