--- a/product-detail/product-detail.css
+++ b/product-detail/product-detail.css
@@ -19,6 +19,10 @@
   height: fit-content; /* Make the embedded content fill the height of the parent div */
 }
 
+body{
+  margin:0;
+  padding:0;
+}
 /* Product image */
 .wrapper {
   display: flex;
@@ -42,11 +46,13 @@
 }
 img {
   height: 100%;
+  
 }
 
 /* Product info */
 .wrapper .info {
   font-weight: bold;
+  margin-left: 1%;
 }
 .title {
   font-size: 2em;
@@ -68,7 +74,7 @@ img {
 .status-boxes {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .box {
   display: flex;
@@ -97,6 +103,7 @@ img {
   width: 100%;
   height: 4.5em;
   overflow: hidden;
+  margin-left: 2%;
 }
 .user-display,
 .btn-display {
@@ -105,13 +112,16 @@ img {
 .user-avatar {
   display: flex;
   align-self: center;
-  margin-left: 2%;
-}
-.user-avatar img {
   width: 3.5em;
   height: 3.5em;
   border-radius: 50%;
   border: 2px solid var(--purple);
+  overflow: hidden;
+}
+.user-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .user-info {
@@ -132,11 +142,13 @@ img {
 
 .btn-display {
   display: flex;
+  justify-content: center;
 }
 button {
-  width: 50%;
+  width: 45%;
   border: none;
   font-size: 2.15em;
+  cursor: pointer;
 }
 .btn-add-to-cart {
   background-color: var(--white);
