--- a/homescreen/homescreen-already-sign-in.css
+++ b/homescreen/homescreen-already-sign-in.css
@@ -1,27 +1,30 @@
 body {
-    --main-color: #5362CE;
-    --place-holder: #d1d1d1;
-    --white-grey: #d9d9d9;
+  --main-color: #5362ce;
+  --place-holder: #d1d1d1;
+  --white-grey: #d9d9d9;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Navigation bar */
 .navbar-container {
-    width: 100%;
-    height: 4.5em;
-    margin: 0 auto;
-    display: block;
-    padding: 0;
-  }
-  .embedded-content {
-    width: 100%;
-    height: fit-content;
-  }
-
+  width: 100%;
+  height: 4.5em;
+  margin: 0 auto; /* Center the container */
+  display: block; /* Ensure it behaves as a block-level element */
+  padding: 0; /* Remove any padding */
+}
+.embedded-content {
+  width: 100%; /* Make the embedded content fill the width of the parent div */
+  height: fit-content; /* Make the embedded content fill the height of the parent div */
+}
+body {
+  margin: 0;
+  padding: 0;
+}
 /*
 .searching {
     display: flex;
@@ -33,8 +36,8 @@ body {
 }
 */
 .space-around {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 /*
 .logo {
@@ -81,47 +84,47 @@ body {
 }
 */
 .information {
-    display: flex;  
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 300px;
-    background-color: var(--white-grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 300px;
+  background-color: var(--white-grey);
 }
 
 h1 {
-    margin-left: 20px;
-    font-weight: bolder;
+  margin-left: 20px;
+  font-weight: bolder;
 }
 
 .topic {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 350px;
-    height: 300px;
-    border-radius: 20px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  height: 300px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .picture {
-    width: 350px;
-    height: 250px;
-    background-color: grey;  
-    margin-bottom: 20px; 
-    border-radius: 20px;
+  width: 350px;
+  height: 250px;
+  background-color: grey;
+  margin-bottom: 20px;
+  border-radius: 20px;
 }
 
 .title {
-    font-size: x-large;
-    font-weight: bold;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 530px) {
-    .img {
-        width: 100%;
-    }
-    .folder {
-        display: block;
-    }
+  .img {
+    width: 100%;
   }
+  .folder {
+    display: block;
+  }
+}
