--- a/product-detail/product-detail.css
+++ b/product-detail/product-detail.css
@@ -27,16 +27,14 @@ body{
 .wrapper {
   display: flex;
   flex-direction: row;
-  margin: 2% 2% 0 2%;
+  margin: 2% 2% 0% 2%;
 }
 .image,
 .info {
   flex: 1;
 }
 .image {
-  width: 100%;
   height: 25em;
-  margin-right: 2%;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -46,13 +44,13 @@ body{
 }
 img {
   height: 100%;
-  
 }
 
 /* Product info */
 .wrapper .info {
+  width: auto;
   font-weight: bold;
-  margin-left: 1%;
+  margin-left: 2%;
 }
 .title {
   font-size: 2em;
