--- a/bookscreen.css
+++ b/bookscreen.css
@@ -1,52 +1,51 @@
 body {
-    --main-color: #5362CE;
-    --place-holder: #d1d1d1;
-    --sub-color: #EAECFA;
-    --dark-grey: #7a7c83;
-    --white-grey: #d4d4d4;
+  --main-color: #5362ce;
+  --place-holder: #d1d1d1;
+  --sub-color: #eaecfa;
+  --dark-grey: #7a7c83;
+  --white-grey: #d4d4d4;
 
-    font-size: normal;
-    font-weight: bold;
+  font-size: normal;
+  font-weight: bold;
 }
 
 .bold {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 .large {
-    font-size: large;
+  font-size: large;
 }
 
 .larger {
-    font-size: x-large;
+  font-size: x-large;
 }
 
 .small {
-    font-size: small;
+  font-size: small;
 }
 
 .smaller {
-    font-size: x-small;
+  font-size: x-small;
 }
 
 .dark-grey {
-    color: #7a7c83;
+  color: #7a7c83;
 }
 
 .white-grey {
-    color: #d4d4d4;
-
+  color: #d4d4d4;
 }
 
 .align-left {
-    align-self: flex-start;
+  align-self: flex-start;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
-
+/*
 .searching {
     display: flex;
     justify-content: space-between;
@@ -55,12 +54,13 @@ body {
     height: 60px;
     background-color: var(--main-color);
 }
+*/
 
 .space-around {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
-
+/*
 .logo {
     margin-left: 20px;
     color: white;
@@ -109,163 +109,180 @@ body {
     background-color: white;
     border-radius: 20px;
 }
+*/
+/* Navigation bar style */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+object.embedded-content {
+  width: 100%;
+  height: 4.5em;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+}
 
 .home-page {
-    display: flex;  
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20rem;
 }
 
 h1 {
-    margin-left: 20px;
-    font-weight: bolder;
+  margin-left: 20px;
+  font-weight: bolder;
 }
 
 .content {
-    display: flex;
-    padding: 1rem;
+  display: flex;
+  padding: 1rem;
 }
 
 .filter {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    width: 20%;
-    height: 100%;
-    background-color: var(--sub-color);
-    border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  width: 20%;
+  height: 100%;
+  background-color: var(--sub-color);
+  border-radius: 2rem;
 }
 
 .part-name {
-    font-size: large;
-    color: var(--main-color);
-    align-self: flex-start;
-    margin-left: 0.5rem;
+  font-size: large;
+  color: var(--main-color);
+  align-self: flex-start;
+  margin-left: 0.5rem;
 }
 
 hr {
-    height: 1px;
-    width: 80%;
-    background-color: var(--dark-grey);
+  height: 1px;
+  width: 80%;
+  background-color: var(--dark-grey);
 }
 
 .categories {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .option {
-    height: 100%;
-    margin: 0.5rem;
+  height: 100%;
+  margin: 0.5rem;
 }
 
 button {
-    box-shadow: none;
-    font-weight: bold;
+  box-shadow: none;
+  font-weight: bold;
 }
 
 .choice {
-    width: 100%;
-    height: 40px;
-    background-color: white;
-    border: 0px;
-    color: var(--main-color);
-    border-radius: 1rem;
-    margin: 0.5rem;
+  width: 100%;
+  height: 40px;
+  background-color: white;
+  border: 0px;
+  color: var(--main-color);
+  border-radius: 1rem;
+  margin: 0.5rem;
 }
 
 .star {
-    display: flex;
-    align-self: flex-start;
-    margin: 0.5rem;
+  display: flex;
+  align-self: flex-start;
+  margin: 0.5rem;
 }
 
 .apps {
-    width: 80%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .app {
-    width: 23%;
-    height: 300px;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--sub-color);
+  width: 23%;
+  height: 300px;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--sub-color);
 }
 
 .apps-in-a-row {
-    margin: 1rem;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
+  margin: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .thumbnail {
-    width: 100%;
-    height: 55%;
-    border-radius: 1rem;
-    background-color: var(--white-grey);
+  width: 100%;
+  height: 55%;
+  border-radius: 1rem;
+  background-color: var(--white-grey);
 }
 
 .app-text {
-    width: 100%;
-    height: 30%;
-    box-sizing: border-box;
-    padding: 1rem;
+  width: 100%;
+  height: 30%;
+  box-sizing: border-box;
+  padding: 1rem;
 }
 
 .user {
-    width: 100%;
-    height: 15%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem 0.2rem 1rem;
-    box-sizing: border-box;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem 0.2rem 1rem;
+  box-sizing: border-box;
 }
 
 .info-user {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .ava {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 100%;
-    background-color: var(--white-grey);
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  background-color: var(--white-grey);
 }
 
 .name {
-    margin-left: 0.5rem;
-    display: flex;
-    flex-direction: column;
+  margin-left: 0.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .request {
-    background-color: var(--main-color);
-    border-radius: 2rem;
-    color: white;
-    border: 0px;
-    width: 40%;
-    height: 70%;
+  background-color: var(--main-color);
+  border-radius: 2rem;
+  color: white;
+  border: 0px;
+  width: 40%;
+  height: 70%;
 }
 
 @media screen and (max-width: 530px) {
-    .img {
-        width: 100%;
-    }
-    .categories, .apps-in-a-row {
-        display: block;
-    }
+  .img {
+    width: 100%;
+  }
+  .categories,
+  .apps-in-a-row {
+    display: block;
+  }
 }
