--- a/items-search/items-search.css
+++ b/items-search/items-search.css
@@ -17,10 +17,6 @@ body {
     font-size: large;
 }
 
-.larger {
-    font-size: x-large;
-}
-
 .small {
     font-size: small;
 }
@@ -51,9 +47,62 @@ h1 {
     font-weight: bolder;
 }
 
+button {
+    background-color: var(--main-color);
+    box-shadow: none;
+    border: var(--main-color) 0 solid;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.hover-pointer:hover {
+    cursor: pointer;
+    color: var(--dark-grey);
+}
+
+.hover-area:hover {
+    background-color: var(--white-grey);
+}
+
 .container {
     display: flex;
     flex-direction: column;
+}
+
+.searching {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0.25rem 0.25rem 0 var(--dark-grey);
+}
+
+.search-bar {
+    padding-left: 20px; 
+    background-color: white;
+    width: 65%;
+    height: 2.5rem;
+    border: 0px;
+    border-radius: 20px;
+}
+
+.search-bar::placeholder {
+    color: var(--place-holder);
+}
+
+.content {
+    font-size: large;
+}
+
+.research-content {
+    margin-left: 3%;
+    background-color: white;
+    width: 100%;
+    height: 100%;
 }
 
 .space-around {
@@ -71,13 +120,12 @@ h1 {
 }
 
 .margin-left {
-    margin: 0 0 0 3%;
+    margin-left: 3%;
 }
 
 hr {
     border-color: white;
     border-width: 0.25px;
-    margin: 1rem 0 1rem 0;
 }
 
 .topic {
@@ -100,15 +148,33 @@ hr {
     font-size: xx-large;
 }
 
+.cancel {
+    font-size: x-large;
+    color: white;
+}
+
 @media screen and (max-width: 530px) {
     .img {
         width: 100%;
     }
-    .space-around {
-        flex-direction: column;
-    }
 
     .topic {
         width: 100%;
+        margin: 0.25rem;
     }
+
+    .title-topic {
+        font-size: x-large;
+        left: 10%;
+    }
+
+    .icon {
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .cancel {
+        font-size: large;
+    }
+
   }
