--- a/items-search/items-search.css
+++ b/items-search/items-search.css
@@ -4,57 +4,49 @@ body {
     --sub-color: #EAECFA;
     --dark-grey: #7a7c83;
     --white-grey: #d4d4d4;
-
     font-size: normal;
     font-weight: bold;
+    font-family: "Times New Roman", Times, serif;
 }
 
 .bold {
     font-weight: bolder;
 }
-
 .large {
     font-size: large;
 }
-
+.larger {
+    font-size: x-large;
+}
 .small {
     font-size: small;
 }
-
 .smaller {
     font-size: x-small;
 }
-
 .dark-grey {
     color: #7a7c83;
 }
-
 .white-grey {
     color: #d4d4d4;
-
 }
-
 .white {
     color: white;
 }
-
 .align-left {
     align-self: flex-start;
 }
-
 h1 {
     margin-left: 20px;
     font-weight: bolder;
 }
-
-button {
-    background-color: var(--main-color);
-    box-shadow: none;
-    border: var(--main-color) 0 solid;
+.space-around {
+    display: flex;
+    justify-content: space-around;
 }
 
-button:hover {
-    cursor: pointer;
+.hover-area:hover {
+    background-color: var(--white-grey);
 }
 
 .hover-pointer:hover {
@@ -62,13 +54,15 @@ button:hover {
     color: var(--dark-grey);
 }
 
-.hover-area:hover {
-    background-color: var(--white-grey);
-}
-
 .container {
     display: flex;
     flex-direction: column;
+}
+
+.icon {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
 }
 
 .searching {
@@ -94,25 +88,10 @@ button:hover {
     color: var(--place-holder);
 }
 
-.content {
-    font-size: large;
-}
-
-.research-content {
-    margin-left: 3%;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-}
-
-.space-around {
-    display: flex;
-    justify-content: space-around;
-}
-
-.icon {
-    width: 2rem;
-    height: 2rem;
+.cancel {
+    font-size: x-large;
+    color: white;
+    cursor: pointer;
 }
 
 .content {
@@ -120,12 +99,13 @@ button:hover {
 }
 
 .margin-left {
-    margin-left: 3%;
+    margin: 0 0 0 3%;
 }
 
 hr {
     border-color: white;
     border-width: 0.25px;
+    margin: 1rem 0 1rem 0;
 }
 
 .topic {
@@ -148,33 +128,24 @@ hr {
     font-size: xx-large;
 }
 
-.cancel {
-    font-size: x-large;
-    color: white;
-}
-
 @media screen and (max-width: 530px) {
     .img {
         width: 100%;
     }
+    .space-around {
+        flex-direction: column;
+    }
 
     .topic {
         width: 100%;
-        margin: 0.25rem;
-    }
-
-    .title-topic {
-        font-size: x-large;
-        left: 10%;
-    }
-
-    .icon {
-        width: 1rem;
-        height: 1rem;
     }
 
     .cancel {
         font-size: large;
     }
 
+    .icon {
+        width: 1rem;
+        height: 1rem;
+    }
   }
