--- a/usershop-inbox/usershop-inbox.css
+++ b/usershop-inbox/usershop-inbox.css
@@ -247,6 +247,7 @@ button:hover {
     border-radius: 1.5rem;
     background-color: var(--white-grey);
     margin: 0 1rem 0 1rem;
+    cursor: text;
 }
 
 .chat-option {
@@ -259,6 +260,7 @@ button:hover {
     height: 3.5rem;
     background-color: var(--white-grey);
     border-radius: 1.5rem;
+    border: var(--white-grey) 0 solid;
 }
 
 @media screen and (max-width: 530px) {
