--- a/items-search/items-search.css
+++ b/items-search/items-search.css
@@ -7,6 +7,8 @@ body {
     font-size: normal;
     font-weight: bold;
     font-family: "Times New Roman", Times, serif;
+    margin: 0;
+    padding: 0;
 }
 
 .bold {
