--- a/usershop-inbox/usershop-inbox.css
+++ b/usershop-inbox/usershop-inbox.css
@@ -9,6 +9,8 @@ body {
     --white-grey: #d9d9d9;
     font-family: "Times New Roman", Times, serif;
     font-size: normal;
+    margin: 0;
+    padding: 0;
 }
 
 .bold {
